service/argocd/overlay/ingressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: gitops
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: HostRegexp(`argo.apealive.{tld:(home|local|net)}`)
    priority: 11
    services:
    - name: argocd-server
      port: 80
      namespace: gitops
  # - kind: Rule
  #   match: HostRegexp(`argo.apealive.{tld:(home|local|net)}`) && Headers(`Content-Type`, `application/grpc`)
  #   priority: 12
  #   services:
  #   - name: argocd-server
  #     port: 80
  #     scheme: h2c
  #     namespace: gitops
  tls:
    domains:
    - main: apealive.net
      sans:
      - argo.apealive.net
      - argocd.apealive.net
